--- a/package.json
+++ b/package.json
@@ -12,19 +12,27 @@
     "@snowpack/plugin-react-refresh": "^2.3.5",
     "@snowpack/plugin-typescript": "^1.1.0",
     "@snowpack/web-test-runner-plugin": "^0.1.3",
+    "@types/electron": "^1.6.10",
     "@types/material-ui": "^0.21.8",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
     "@types/react-router-dom": "^5.1.6",
     "@web/test-runner": "^0.9.7",
+    "electron": "^10.1.5",
     "jest": "^26.6.1",
     "snowpack": "^2.16.1"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "firebase": "^8.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
+  },
+  "scripts": {
+    "start": "snowpack dev",
+    "build":"snowpack",
+    "desktop-start":"electron electron"
   }
 }
